[gd_scene load_steps=5 format=3 uid="uid://biwce850amks2"]

[ext_resource type="Script" path="res://scripts/menus/MainMenu.gd" id="1_iofs5"]
[ext_resource type="Texture2D" uid="uid://735q3c15xax5" path="res://assets/MyAssets/poster.PNG" id="1_lm7yd"]
[ext_resource type="FontFile" uid="uid://digbq0mlkbh3p" path="res://assets/TemplateAssets/Assets/Font/Schr√∂dinger.ttf" id="2_n12dx"]
[ext_resource type="Texture2D" uid="uid://da7s37jgm7iyp" path="res://assets/MyAssets/logoBlack.png" id="3_t0umq"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_iofs5")

[node name="ColorRect" type="TextureRect" parent="."]
offset_top = -231.0
offset_right = 1920.0
offset_bottom = 2276.29
texture = ExtResource("1_lm7yd")
expand_mode = 5

[node name="StartButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 1194.0
offset_top = 298.0
offset_right = 1884.0
offset_bottom = 450.0
theme_override_fonts/font = ExtResource("2_n12dx")
theme_override_font_sizes/font_size = 60
text = "START"

[node name="ControlsButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 1191.0
offset_top = 472.0
offset_right = 1881.0
offset_bottom = 624.0
theme_override_fonts/font = ExtResource("2_n12dx")
theme_override_font_sizes/font_size = 60
text = "CONTROLS"

[node name="QuitButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 1193.0
offset_top = 654.0
offset_right = 1883.0
offset_bottom = 806.0
theme_override_fonts/font = ExtResource("2_n12dx")
theme_override_font_sizes/font_size = 60
text = "QUIT"

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = -1.654
anchor_top = 4.3
anchor_bottom = 4.3
offset_left = 48.0
offset_top = 712.0
offset_right = 693.0
offset_bottom = 1047.0
texture = ExtResource("3_t0umq")
expand_mode = 1

[connection signal="pressed" from="ColorRect/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ColorRect/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="ColorRect/QuitButton" to="." method="_on_quit_button_pressed"]
